--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ronan</string>
+    <string name="google_maps_key">AIzaSyAo2DXpNnGDeYpfrlAaV8J3p_EFlu4WxBY</string>
 </resources>
